<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navbar_home"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/navigation_leaderboard"
        android:icon="@drawable/ic_baseline_leaderboard_24"
        android:title="@string/navbar_leaderboard"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_baseline_camera_alt_24"
        android:title="@string/navbar_camera"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_ellipsis"
        android:title="@string/navbar_more" />
</menu>